# catr

./: Cargo.toml  temp.txt
src/: lib.rs  main.rs  types.rs
src/catr/: catr.rs  mod.rs
src/headr/: headr.rs  mod.rs
src/wcr/: mod.rs  wcr.rs
tests/: cli.rs
