[package]
name = "catr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6" }

[dev-dependencies]
assert_cmd = { version = "2.0.12" }
predicates = { version = "3.0.4" }
rand = { version = "0.8.5" }
